# layout-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  launch.bat  launch.sh  pyproject.toml  requirements.txt
data/: cubes.xlsx  outline.dxf
src/layout_agent/: config.py  cp_sat_baseline.py  geometry.py  initializer.py  io_dxf.py  io_excel.py  main.py  models.py  moves.py  objective.py  optimizer.py  repair.py  streamlit_app.py  visualize.py
