[project]
name = "layout-agent"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  # Core geometry
  "shapely>=2.0",
  "numpy>=1.26",
  # I/O
  "ezdxf>=1.1",
  "openpyxl>=3.1",
  # Visualisation
  "matplotlib>=3.8",
]

[project.optional-dependencies]
ui    = ["streamlit>=1.32"]
cpsat = ["ortools>=9.8"]

[project.scripts]
layout-agent = "layout_agent.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
